--- a/foundry.toml
+++ b/foundry.toml
@@ -4,3 +4,7 @@ out = 'out'
 libs = ['lib']
 
 # See more config options https://github.com/foundry-rs/foundry/tree/master/config
+
+[invariant]
+
+runs = 50
